# LLMDistiller

./: .gitignore  AGENTS.md  README.md  THINKING_IMPLEMENTATION.md  WORKFLOW_IMPLEMENTATION.md  add_system_prompt_column.py  add_thinking_columns.py  config.example.json  config.json  migrate_default_correct.py  mkdocs.yml  pyproject.toml  questions.csv  requirements-dev.txt  requirements.txt  runtest.sh  sample_questions.csv  test_comma_handling.csv  test_custom_system_prompt.csv  test_default_correct.csv  test_default_correct_false.csv  test_default_correct_new.csv  test_full_thinking_flow.py  test_problematic.csv  test_system_prompt.csv  test_thinking_extraction.py
.github/: WORKFLOWS.md  dependabot.yml
.github/workflows/: ci.yml  dependencies.yml  docs.yml  performance.yml  quality.yml  release.yml  security.yml
config/: config.json
docs/: README.md
docs/01-overview/: architecture.md  design-decisions.md  project-overview.md
docs/02-database/: migrations.md  models.md  schema.md
docs/03-configuration/: config-reference.md  providers.md
docs/03-configuration/examples/: config-examples.md
docs/04-api/: cli-reference.md  importers.md  llm-client.md  validation.md
docs/05-implementation/: contributing.md  processing-engine.md  setup.md  testing.md
docs/06-examples/: quick-start.md
src/cli/: main.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  base.py  manager.py  models.py
src/exporters/: dataset_exporter.py
src/importers/: base.py  csv_importer.py
src/llm/: __init__.py  base.py  openai_provider.py
src/llm_distiller/: __init__.py  main.py
src/llm_distiller/cli/: main.py
src/llm_distiller/config/: settings.py
src/llm_distiller/database/: manager.py  models.py
src/llm_distiller/exporters/: __init__.py  dataset_exporter.py
src/llm_distiller/importers/: __init__.py  base.py  csv_importer.py
src/llm_distiller/llm/: base.py  openai_provider.py
src/llm_distiller/utils/: rate_limiter.py
src/llm_distiller/validators/: __init__.py  schema_validator.py
src/processing/: __init__.py  batcher.py  engine.py  manager.py  models.py  queue.py  worker.py
src/validators/: __init__.py
tests/: conftest.py
tests/e2e/: test_workflows.py
tests/integration/: test_cli.py
tests/unit/: test_csv_importer.py  test_models.py  test_settings.py
